[project]
name = "val3dity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bumpver>=2025.1131",
    "click>=8.3.1",
    "mapbox-earcut>=2.0.0",
    "numpy>=2.4.0",
    "polyscope>=2.5.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
]
